Clicking on a party navigates you to the location Fix spacing in party window Closes #72 Closes #71

--- a/GuildWarsPartySearch.FrontEnd/Content/stylesheet.css
+++ b/GuildWarsPartySearch.FrontEnd/Content/stylesheet.css
@@ -21,7 +21,7 @@ body {
 
 
 .legal {
-    font-size: 6pt;
+    font-size: 8pt;
     color: #808080;
     text-align: left;
     position: relative;
@@ -84,7 +84,7 @@ body {
     }
 
 .menuHeader {
-    font-size: 13pt;
+    font-size: 14pt;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
@@ -100,7 +100,7 @@ body {
 
     .partyList div .mapRow {
         border-bottom: solid 1px #808080;
-        font-size: 10pt;
+        font-size: 12pt;
         padding-left: 15px;
         cursor: pointer;
         height: 30px;
@@ -140,7 +140,7 @@ body {
         padding-right: 5px;
         margin: 0;
         border-bottom: solid 1px #808080;
-        font-size: 10pt;
+        font-size: 12pt;
     }
 
         .maplist div:hover {
@@ -289,6 +289,10 @@ body {
     transition: opacity 0.3s ease, max-height 0.3s ease;
 }
 
+.collapsed {
+    display: none !important;
+}
+
 .unclickable{
     cursor: initial !important;
 }
@@ -298,7 +302,7 @@ body {
 }
 
 .small {
-    font-size: 8pt;
+    font-size: 10pt;
 }
 
 #popupWindow {
@@ -357,7 +361,7 @@ body {
     #popupWindow .table .row .header{
         display: table-cell;
         text-align: center;
-        font-size: 11pt;
+        font-size: 12pt;
     }
 
     #popupWindow .table .row .cell {
